--- a/algo-ds/pom.xml
+++ b/algo-ds/pom.xml
@@ -5,8 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>Main</artifactId>
+    <artifactId>algo-ds</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>dijkstra-algorithm</module>
+        <module>sorting</module>
+        <module>hrokking-algorithms</module>
+    </modules>
     <build>
         <plugins>
             <plugin>
